--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/grilled_cheese_sandwich.html">Grilled Cheese Sandwich</a></li>
+            <li><a href="recipes/strawberry_pretzel_salad.html">Strawberry Pretzel Salad</a></li>
+        </ul>
     </body>
 </html>
