Change meal image links to local paths
Add images folder with images of meals. Change links in recipe pages
to reference the new local images.

--- a/recipes/strawberry_pretzel_salad.html
+++ b/recipes/strawberry_pretzel_salad.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Strawberry Pretzel Salad</h1>
-    <img src="https://www.allrecipes.com/thmb/6t3cBYBLJMWhVT4IgB2tYmnh8pY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20338-strawberry-pretzel-salad-humblepieliving-003-1x1-1-320404ea9a4a4878ad6c4f88b2be4061.jpg" alt="A spoon holding up a piece of strawberry pretzel cake">
+    <img src="./images/strawberry_pretzel_salad.jpg" alt="A spoon holding up a piece of strawberry pretzel cake">
 
     <h2>Description</h2>
     <p>Strawberry pretzel salad is an easy dessert with lots of contrasting textures and flavors. It isn't too sweet, nor too salty, and looks really pretty when you make it in a glass ovenproof baking dish.</p>
