--- a/recipes/grilled_cheese_sandwich.html
+++ b/recipes/grilled_cheese_sandwich.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Grilled Cheese Sandwich</h1>
-    <img src="https://www.allrecipes.com/thmb/sUsXkXZkIi7SRlasL361wd8EJdU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2206436-d0018545bcb545b6b98c1a23659777cf.jpg" alt="Four slices of grilled sandwich with melted cheese">
+    <img src="./images/grilled_cheese_sandwich.jpg" alt="Four slices of grilled sandwich with melted cheese">
 
     <h2>Description</h2>
     <p>Learn how to make a grilled cheese sandwich in a nonstick pan with buttered bread and American Cheddar for a classic hot sandwich.</p>
