Add basic styling to the website

--- a/recipes/strawberry_pretzel_salad.html
+++ b/recipes/strawberry_pretzel_salad.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css"/>
     <title>Strawberry Pretzel Salad</title>
 </head>
 <body>
@@ -14,11 +15,11 @@
 
     <h2>Ingredients</h2>
     <ul>
-        <li>Pretzels: To easily make crushed pretzels, place them in a zip-top bag and crush them with a rolling pin.</li>
-        <li>Butter: Melted butter lends moisture and helps bind the crushed pretzels together, creating a delicious crust.</li>
-        <li>Sugar: You'll need white sugar for the pretzel crust and for the fluffy cream cheese topping.</li>
-        <li>Cream cheese and whipped topping: Beat cream cheese, sugar, and whipped topping together to make a decadent topping.</li>
-        <li>Jell-O and frozen strawberries: Dissolve two packages of strawberry-flavored Jell-O in two cups of boiling water, then combine with frozen strawberries.</li>
+        <li><strong>Pretzels</strong>: To easily make crushed pretzels, place them in a zip-top bag and crush them with a rolling pin.</li>
+        <li><strong>Butter</strong>: Melted butter lends moisture and helps bind the crushed pretzels together, creating a delicious crust.</li>
+        <li><strong>Sugar</strong>: You'll need white sugar for the pretzel crust and for the fluffy cream cheese topping.</li>
+        <li><strong>Cream cheese and whipped topping</strong>: Beat cream cheese, sugar, and whipped topping together to make a decadent topping.</li>
+        <li><strong>Jell-O and frozen strawberries</strong>: Dissolve two packages of strawberry-flavored Jell-O in two cups of boiling water, then combine with frozen strawberries.</li>
     </ul>
 
     <h2>Steps</h2>
