--- a/recipes/grilled_cheese_sandwich.html
+++ b/recipes/grilled_cheese_sandwich.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css"/>
     <title>Grilled Cheese Sandwich Recipe</title>
 </head>
 <body>
@@ -14,9 +15,9 @@
 
     <h2>Ingredients</h2>
     <ul>
-        <li>4 slices of white bread: This recipe calls for plain white sandwich bread. You could also use sourdough, brioche, or even ciabatta. You can really make grilled cheese with any type of bread you like, but you should make sure the loaf is sturdy enough to handle the heat. Thinly sliced, delicate breads will quickly fall apart.</li>
-        <li>2 slices of cheese: You can use sharp Cheddar, mild Cheddar, or a blend of both. Another classic choice is plain ol' sliced American cheese; it tastes nostalgic and gives you a gorgeous cheese pull.</li>
-        <li>3 tablespoons of butter</li>
+        <li><strong>4 slices of white bread</strong>: This recipe calls for plain white sandwich bread. You could also use sourdough, brioche, or even ciabatta. You can really make grilled cheese with any type of bread you like, but you should make sure the loaf is sturdy enough to handle the heat. Thinly sliced, delicate breads will quickly fall apart.</li>
+        <li><strong>2 slices of cheese</strong>: You can use sharp Cheddar, mild Cheddar, or a blend of both. Another classic choice is plain ol' sliced American cheese; it tastes nostalgic and gives you a gorgeous cheese pull.</li>
+        <li><strong>3 tablespoons of butter</strong></li>
     </ul>
 
     <h2>Steps</h2>
