--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         <link rel="stylesheet" href="./styles.css"/>
     </head>
 
-    <body>
+    <body class="box-menu">
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/grilled_cheese_sandwich.html">Grilled Cheese Sandwich</a></li>
             <li><a href="recipes/strawberry_pretzel_salad.html">Strawberry Pretzel Salad</a></li>
         </ul>
+        <img src="./recipe-book.png" alt="a painted picture of a pink recipe recipe book">
     </body>
 </html>
